# substrate-remote-signer-example

./: .gitignore  Cargo.toml  README.md
example-server/: Cargo.toml
example-server/src/: main.rs
lib/: Cargo.toml
src/: command.rs  service.rs
