[package]
name = "node-tssrs-example"
version = "2.0.0"
publish = false
authors = ["Anonymous"]
description = "A new FRAME-based Substrate node, ready for hacking."
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-tssrs-example"

[dependencies]
structopt = "0.3.8"

# this was added
tssrs = { package = "substrate-example-tssrs", path = "./lib", features = ["client"] }


sc-cli = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer",  features = ["wasmtime"] }
sp-core = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
sc-executor = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer",  features = ["wasmtime"] }
sc-service = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer",  features = ["wasmtime"] }
sc-keystore = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
sp-inherents = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
sc-transaction-pool = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
sp-transaction-pool = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
sc-consensus-aura = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
sp-consensus-aura = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
sp-consensus = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
sc-consensus = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
sc-finality-grandpa = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
sp-finality-grandpa = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
sc-client-api = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
sp-runtime = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "15.1.0"
sc-rpc = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
sp-api = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
sc-rpc-api = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
sp-blockchain = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
sp-block-builder = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
sc-basic-authorship = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
substrate-frame-rpc-system = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
pallet-transaction-payment-rpc = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
frame-benchmarking-cli = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }

node-template-runtime = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }

[build-dependencies]
substrate-build-script-utils = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }

[features]
default = []
runtime-benchmarks = [
	"node-template-runtime/runtime-benchmarks",
]
