[package]
name = "substrate-tsrss-example-server"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
publish = false
license = "GPL-3.0-or-later"
description = "This is an example application for the Too Simple Substrate Remote Signer (tssrs) JSON-RPC protocol."
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[dependencies]
se-remote-signer = { package = "substrate-example-tssrs", version = "0.1.0", path = "../lib" }
structopt = { version = "0.3", default-features = false }
sc-cli = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
sc-keystore = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
sc-service = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
jsonrpc-http-server = { version = "14.2.0" }
jsonrpc-ws-server = { version = "14.2.0" }
tokio = { version = "0.2", features = ["full"] }
env_logger = "0.7.1"