[package]
name = "substrate-example-tssrs"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
publish = false
license = "GPL-3.0-or-later"
homepage = "https://substrate.dev"
repository = "https://github.com/gnunicorn/substrate-remote-signer-example"
description = "Example implementation or remote signing through the Too Simple Substrate Remote Signer protocol over JSON-RPC"

[dependencies]
hyper = "0.12"

jsonrpc-derive = "14.2.1"
jsonrpc-core = "14.2.0"
jsonrpc-core-client = "14.0"
jsonrpc-client-transports = { version = "14.2.1", optional = true }
sp-core = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
sp-consensus-babe = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer", optional = true }
sp-application-crypto = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }
sc-keystore = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer", optional = true }
sp-keystore = { version = "0.8.0", git = "https://github.com/paritytech/substrate", branch = "ben-remote-signer" }

futures = { version = "0.3.5", features = ["compat"] }
parking_lot = "0.11"
serde = { version = "1.0.115", features = ["derive"] }
async-trait = { version = "0.1.30", optional = true }
log = "0.4.11"
tokio = { version = "0.2", optional = true}
url = { version = "1.7.2", optional = true }

[dev-dependencies]
jsonrpc-test = "14.2.0"
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0.57"

[features]
default = ["server", "client"]
server = [
    "sp-consensus-babe",
    "sc-keystore",
]
client = [
    "async-trait",
    "tokio",
    "jsonrpc-client-transports",
    "url",
]
